removed overflow that creates visual bug

--- a/src/assets/css/library.css
+++ b/src/assets/css/library.css
@@ -145,8 +145,8 @@ body {
     grid-template-rows: 214px;
     grid-column-gap: 30px;
     grid-row-gap: 20px;
-    overflow-y: auto;
-    overflow-x: hidden;
+    /* overflow-y: auto;
+    overflow-x: hidden; */
 }
 
 #book-section-grid .book-box {
